--- a/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
+++ b/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
@@ -164,16 +164,17 @@
 
 .cartbtnimg img {
     padding: 10px;
-    margin-right: 20px;
     border-radius: 7px;
     border: 1px solid var(--borderColor);
 
 }
 
-.cartbtnimg button {
+.cartbtnimgbutton1 {
+    margin-top: 10px;
     width: 100%;
-    height: 100%;
+    margin-left: 15px;
     display: flex;
+    padding: 10px;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
@@ -181,5 +182,22 @@
     outline: none;
     background-color: var(--primaryColor);
     color: white;
+
+}
+
+.cartbtnimgbutton2 {
+    margin-top: 10px;
+    width: 100%;
+    margin-left: 15px;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--textColorDark);
+    background-color: var(--white);
+    border: 1px solid var(--borderColor);
 
 }
