changes quoted on 2 feb

--- a/src/Components/Login/ClientLogin/ClientLogin.css
+++ b/src/Components/Login/ClientLogin/ClientLogin.css
@@ -105,7 +105,7 @@
 .clientLoginCompBodyButtonDisable {
   background-color: var(--disableColor);
   width: 100%;
-  color: #b6babf;
+  color: var(--textColor);
   padding: 10px;
   border-radius: 10px;
 }
