--- a/src/Components/ClientScreen/BillingComp/BillingComp.css
+++ b/src/Components/ClientScreen/BillingComp/BillingComp.css
@@ -6,6 +6,23 @@
     background-color: #f8f8f8;
 }
 
+.paidData {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.paidData p {
+    background-color: #CCFBF1;
+    padding: 0px 10px;
+    font-size: 14px;
+    border-radius: 20px;
+    margin-right: 5px;
+    color: #14B8A6;
+}
+
 /* billing card */
 .billingCard {
     width: 100%;
@@ -70,7 +87,7 @@
 
 /* table */
 .firstTableHead {
-    width: 50%;
+    width: 40%;
 }
 
 .lastTableHead {
@@ -104,11 +121,10 @@
 
 .billingInfo .billingClose {
     width: 100%;
-    /* background-color: green; */
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    /* padding: 12px; */
+
 
 }
 
