--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -751,11 +751,12 @@
 }
 
 .lanSearch input {
-    width: 100px;
+    width: 130px;
     height: 100%;
     outline: none;
     border: none;
     padding: 10px 5px;
+    /* background-color: red; */
 }
 
 .languages input::placeholder {
