--- a/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
+++ b/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
@@ -29,8 +29,10 @@
     margin-right: 8px;
     padding: 5px;
     padding-left: 10px;
-    padding-right: 35px;
+    padding-right: 30px;
     border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
     position: relative;
     display: flex;
     align-items: center;
@@ -108,11 +110,9 @@
 .location {
     width: 300px;
     height: 280px;
-
     position: relative;
     left: 14%;
     padding: 5px;
-
     margin-top: 15px;
     border-radius: 10px;
     background-color: var(--white);
@@ -159,6 +159,15 @@
 .locDesc p {
     font-size: 16px;
     font-weight: 500;
+}
+
+.dashBoardMainSelectbutton h6 {
+    font-size: 12px;
+    font-weight: 500;
+    padding: 1px 5px;
+    background-color: #e4deff;
+    border-radius: 50%;
+    margin-left: 6px;
 }
 
 /* all Filter */
