--- a/src/Components/Reusable/SideBar/SideBar.css
+++ b/src/Components/Reusable/SideBar/SideBar.css
@@ -164,3 +164,12 @@
     border-radius: 8px;
     margin-bottom: 10px;
 }
+
+.number {
+    font-size: 12px;
+    font-weight: 500;
+    padding: 1px 5px;
+    background-color: #e4deff;
+    border-radius: 50%;
+    margin-left: 6px;
+}
