--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -671,6 +671,7 @@
     background-color: white;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
     width: 600px;
@@ -687,7 +688,10 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    flex-direction: column;
+}
+
+.addLanguageInner {
+    width: 70%;
 }
 
 .addLanguages h3 {
@@ -712,8 +716,8 @@
     outline: none;
 }
 
-.addLanguages button {
-    width: 100%;
+.addLanguagesButton {
+    width: 68.5%;
     height: 42px;
     border: 1px solid var(--borderColor);
     border-radius: 7px;
@@ -728,7 +732,7 @@
 }
 
 .selectLanguages {
-    width: 40%;
+    width: 28%;
     height: 100%;
     margin-left: 20px;
 
@@ -749,7 +753,7 @@
 }
 
 .lanSearch input {
-    width: 130px;
+    width: 110px;
     height: 100%;
     outline: none;
     border: none;
