--- a/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
+++ b/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
@@ -162,9 +162,14 @@
 }
 
 .dashBoardMainSelectbutton h6 {
+    height: 18px;
+    width: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 12px;
     font-weight: 500;
-    padding: 1px 5px;
+    /* padding: 1px 5px; */
     background-color: #e4deff;
     border-radius: 50%;
     margin-left: 6px;
