--- a/src/Layout/Layout.css
+++ b/src/Layout/Layout.css
@@ -17,7 +17,7 @@
     height: 100%;
     overflow-y: scroll;
     /* padding: 0px 120px; */
-    background-color: #f8f8f8;
+    background-color: #fafafa;
 }
 
 /* .main::-webkit-scrollbar {
