--- a/src/Components/Candidate/CandidateDashBoard/ProjectDetails/ProjectDetails.css
+++ b/src/Components/Candidate/CandidateDashBoard/ProjectDetails/ProjectDetails.css
@@ -131,10 +131,10 @@
 }
 
 .projectDetailsHighlight {
-    padding: 10px;
+    padding: 20px;
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     background-color: #F5F3FF;
     border: 1px solid var(--borderColor);
     border-radius: 8px;
@@ -142,8 +142,10 @@
 }
 
 .projectDetailsHighlight p {
+    /* width: 80%; */
+    font-weight: 400;
     margin-left: 15px;
-    font-size: 14px;
+    font-size: 15px;
     color: var(--textColor);
 }
 
