--- a/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
+++ b/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
@@ -4,6 +4,13 @@
     padding-bottom: 15px;
 }
 
+.innerVideoResume {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    border: 1px solid var(--dropBorderColor);
+}
+
 .videoResumeHeadLeft {
     display: flex;
     align-items: center;
@@ -16,7 +23,7 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 8px;
-    border: 1px solid var(--dropBorderColor);
+    border-bottom: 1px solid var(--dropBorderColor);
     background-color: var(--dropColor);
 }
 
@@ -24,4 +31,84 @@
     font-size: 14px;
     font-weight: 600;
     margin-left: 10px;
+}
+
+.videoResumeDesc {
+    width: 100%;
+    /* height: 300px; */
+    background-color: var(--white);
+    border-bottom-left-radius: 8px;
+    border-bottom-Right-radius: 8px;
+    padding: 30px;
+    padding-top: 15px;
+}
+
+.uploadVedioRes {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border: 1px dashed var(--borderColor);
+    margin-top: 25px;
+    margin-bottom: 25px;
+    border-radius: 8px;
+    background-color: #F8FAFC;
+}
+
+.uploadVedioRes h2 {
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.3;
+
+}
+
+.uploadVedioRes h3 {
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    opacity: 0.3;
+}
+
+.videoResumeDesc h1 {
+    font-size: 16px;
+    font-weight: 500;
+    opacity: 0.5;
+}
+
+.vedioNotes {
+    display: flex;
+    align-items: flex-start;
+    background-color: #F5F3FF;
+    padding: 15px;
+    border-radius: 8px;
+}
+
+.vedioNotes img {
+    margin-right: 10px;
+    margin-top: 5px;
+    color: var(--textColor);
+}
+
+.notes h4 {
+    opacity: 0.6;
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 4px;
+}
+
+.notes {
+    padding-left: 10px;
+}
+
+.notes ol {
+    list-style: number;
+    opacity: 0.6;
+    font-weight: 500;
+    font-size: 14px;
+    padding-left: 20px;
 }
