--- a/src/Components/Candidate/CandidateDashBoard/TravelHistory/TravelHistory.css
+++ b/src/Components/Candidate/CandidateDashBoard/TravelHistory/TravelHistory.css
@@ -159,3 +159,37 @@
     opacity: 0.2;
     margin-left: 5px;
 }
+
+.travelGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+
+
+}
+
+.travelGridOne {
+
+    width: 100%;
+    height: 300px;
+    border-radius: 8px;
+    border: 1px solid var(--borderColor);
+    padding: 25px;
+}
+
+.travelGridOne h3 {
+    display: flex;
+    align-items: baseline;
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 3px;
+    color: var(--textColor);
+
+}
+
+.travelGridOne p {
+    margin-left: 3px;
+    font-size: 13px;
+    font-weight: 500;
+    opacity: 0.5;
+}
