--- a/src/Components/Candidate/CandidateDashBoard/Certifications/Certificate.css
+++ b/src/Components/Candidate/CandidateDashBoard/Certifications/Certificate.css
@@ -4,6 +4,12 @@
     padding-bottom: 15px;
 }
 
+.innerCertificateDesc {
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid var(--dropBorderColor);
+}
+
 .certificateHeadLeft {
     display: flex;
     align-items: center;
@@ -69,7 +75,7 @@
     margin-left: 0;
 }
 
-.certificateDesc h2 {
+.certificateDesc h5 {
     font-size: 20px;
     font-weight: 600;
     opacity: 0.6;
@@ -128,4 +134,176 @@
     opacity: 0.2;
     margin-left: 5px;
 
+}
+
+.certificateDescUpload {
+    border-radius: 8px;
+    border: 1px solid var(--dropBorderColor);
+    margin-bottom: 20px;
+}
+
+.certificateDescUploadDesc {
+    width: 100%;
+    /* height: 300px; */
+    background-color: var(--white);
+    border-bottom-left-radius: 8px;
+    border-bottom-Right-radius: 8px;
+    padding: 15px;
+    padding-top: 15px;
+    border-radius: 8px;
+}
+
+.certificateDescUploadDesc h1 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-left: 10px;
+}
+
+.certificateHighLight {
+    color: var(--primaryColor);
+    margin-left: 2px;
+    font-size: 14px;
+    font-weight: 600
+}
+
+/* overLay */
+.certificateDescOverlay {
+    width: 65%;
+    height: 640px;
+    background-color: white;
+    display: flex;
+    z-index: 10 !important;
+    flex-direction: column;
+    /* padding: 10px; */
+    border-radius: 12px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow-y: scroll;
+}
+
+.outerCertificate {
+    padding: 30px;
+}
+
+.certificateDescUploadDesc h1 {
+    opacity: 0.5;
+}
+
+.uploadCertificate {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border: 1px dashed var(--borderColor);
+    margin-top: 25px;
+    margin-bottom: 25px;
+    border-radius: 8px;
+    background-color: #F8FAFC;
+
+}
+
+.uploadCertificate h2 {
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+
+}
+
+.uploadCertificate h3 {
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    opacity: 0.3;
+}
+
+.addCertification {
+    width: 92.5%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid var(--borderColor);
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.addCertification h6 {
+    font-size: 14px;
+    font-weight: 600;
+    opacity: 0.5;
+    padding-bottom: 0px
+}
+
+.certificateDescOverlayFlex {
+    display: flex;
+    align-items: center;
+    /* padding: 30px; */
+    padding-top: 5px;
+}
+
+.certificateDescOverlayFlexLeft {
+    width: 38%;
+    margin-right: 2%;
+}
+
+.certificateDescOverlayFlexLeft h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.certificateDescOverlayFlexLeft input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+}
+
+.certificateDescOverlayFlexRight {
+    width: 58%;
+    height: 100%;
+    margin-left: 2%;
+}
+
+.certificateDescOverlayFlexRight h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.certificateDescOverlayFlexRight input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+}
+
+/* .certificateDescOverlayFlexRight select {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+} */
+
+.certificationUploaded {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    margin-top: 20px;
+    display: flex;
+    padding: 15px;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border: 1px dashed var(--borderColor);
 }
