--- a/src/Components/Candidate/CandidateDashBoard/PersonalDetails/PersonalDetails.css
+++ b/src/Components/Candidate/CandidateDashBoard/PersonalDetails/PersonalDetails.css
@@ -144,3 +144,107 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.updatePersonalDetails {
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+
+}
+
+.updatePersonalDetails h1 {
+    font-size: 16px;
+    font-weight: 500;
+    opacity: 0.5;
+    margin-bottom: 5px;
+}
+
+.updatePersonalDetailsFlex {
+    display: flex;
+    width: 100%;
+}
+
+.updatePersonalDetailsLeft {
+    width: 48%;
+    margin-right: 2%
+}
+
+.updatePersonalDetailsLeft h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 15px;
+
+}
+
+.updatePersonalDetailsLeft input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 8px;
+    border: 1px solid var(--borderColor);
+}
+
+.updatePersonalDetailsRight {
+    width: 48%;
+    margin-left: 2%;
+}
+
+.updatePersonalDetailsRight h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 15px;
+}
+
+.updatePersonalDetailsRight input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 8px;
+    border-radius: 8px;
+    border: 1px solid var(--borderColor);
+}
+
+.candidateAddressPersonal {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.candidateAddressPersonal input {
+    width: 280px;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid var(--borderColor);
+}
+
+.candidateAddressPersonal select {
+    width: 130px;
+    padding: 11px;
+    border-radius: 8px;
+    margin-top: 8px;
+    border: 1px solid var(--borderColor);
+}
+
+.personalDetailNumber {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.personalDetailNumber input {
+    width: 280px;
+    padding: 10px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    margin-top: 8px;
+    border: 1px solid var(--borderColor);
+}
+
+.personalDetailNumber select {
+    width: 130px;
+    padding: 11px;
+    border-radius: 8px;
+    margin-top: 8px;
+    border: 1px solid var(--borderColor);
+}
