--- a/src/Components/Candidate/CandidateDashBoard/ProfessionalDetails/ProfessionalDetails.css
+++ b/src/Components/Candidate/CandidateDashBoard/ProfessionalDetails/ProfessionalDetails.css
@@ -114,3 +114,142 @@
     font-weight: 600;
     margin-bottom: 3px;
 }
+
+/* overLay */
+.professionalDetailsOverlay {
+    width: 65%;
+    height: auto;
+    background-color: white;
+    display: flex;
+    z-index: 10 !important;
+    flex-direction: column;
+    /* padding: 10px; */
+    border-radius: 12px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.professionalDetailsOverlay h6 {
+    font-size: 16px;
+    font-weight: 600;
+    padding: 30px;
+    opacity: 0.5;
+    padding-bottom: 0px
+}
+
+.professionalDetailsOverlayFlex {
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    padding-top: 5px;
+}
+
+.professionalDetailsOverlayLeft {
+    width: 38%;
+    margin-right: 2%;
+}
+
+
+.professionalDetailsOverlayLeft h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.professionalDetailsOverlayLeft input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+}
+
+.professionalDetailsOverlayLeft select {
+    width: 130px;
+    margin-right: 20px;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+}
+
+.grossSalary {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.professionalDetailsOverlayRight {
+    width: 58%;
+    margin-left: 2%;
+}
+
+.professionalDetailsOverlayRight h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.professionalDetailsOverlayRight input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+}
+
+.yearsActive {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.text {
+    width: 100%;
+    height: 140px;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+}
+
+.textDesc {
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+
+}
+
+.textDesc h5 {
+    font-size: 14px;
+    font-weight: 500;
+    opacity: 0.4;
+    margin-top: 20px;
+}
+
+.AddMore {
+    width: 100%;
+    height: 100%;
+    padding: 0px 30px;
+    padding-bottom: 30px;
+}
+
+.AddMore button {
+    width: 100%;
+    background-color: var(--addMore);
+    border: 1px solid var(--loadingColor);
+    padding: 8px 15px;
+    border-radius: 8px;
+    color: var(--primaryColor);
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.AddMore h3 {
+    margin-left: 20px;
+}
