--- a/src/Components/Candidate/CandidateDashBoard/ProjectDetails/ProjectDetails.css
+++ b/src/Components/Candidate/CandidateDashBoard/ProjectDetails/ProjectDetails.css
@@ -159,3 +159,87 @@
     opacity: 0.2;
     margin-left: 5px;
 }
+
+/* overlay */
+.projectDetailsOverlay {
+    width: 65%;
+    height: auto;
+    background-color: white;
+    display: flex;
+    z-index: 10 !important;
+    flex-direction: column;
+    /* padding: 10px; */
+    border-radius: 12px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.projectDetailsOverlay h6 {
+    font-size: 16px;
+    font-weight: 600;
+    padding: 30px;
+    opacity: 0.5;
+    padding-bottom: 0px
+}
+
+.projectDetailsOverlayFlex {
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    padding-top: 5px;
+}
+
+.projectDetailsOverlayFlexLeft {
+    width: 48%;
+    margin-right: 2%;
+}
+
+.projectDetailsOverlayFlexLeft h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.projectDetailsOverlayFlexLeft input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+}
+
+.projectDetailsOverlayFlexRight {
+    width: 48%;
+    height: 100%;
+    margin-right: 2%;
+}
+
+.projectDetailsOverlayFlexRight h2 {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.skillFlex {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between
+}
+
+.skillFlex h5 {
+    font-size: 14px;
+    opacity: 0.5;
+    font-weight: 500;
+}
+
+.projectDetailsOverlayFlexRight textarea {
+    width: 100%;
+    height: 420px;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 5px;
+    border: 1px solid var(--borderColor);
+
+}
