--- a/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
+++ b/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     padding-bottom: 15px;
+
 }
 
 .innerVideoResume {
@@ -41,6 +42,7 @@
     border-bottom-Right-radius: 8px;
     padding: 30px;
     padding-top: 15px;
+    border-radius: 8px;
 }
 
 .uploadVedioRes {
