--- a/src/Components/ForgetPassword/ForgetPasswordComp.css
+++ b/src/Components/ForgetPassword/ForgetPasswordComp.css
@@ -174,6 +174,7 @@
 
 p[title] span {
     color: var(--primaryColor);
+    cursor: pointer;
 }
 
 /* ========================= Reset Password ========================== */
