--- a/src/Components/Reusable/ProfileCard/ProfileCard.css
+++ b/src/Components/Reusable/ProfileCard/ProfileCard.css
@@ -44,6 +44,7 @@
     border-radius: 10px;
     background-color: var(--white);
     border: 1px solid var(--borderColor);
+    cursor: pointer;
 }
 
 .candidateDiscoverProfile {
