--- a/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
+++ b/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
@@ -113,6 +113,8 @@
 
 .candidateCartSkills img {
     margin-right: 5px;
+    object-fit: cover;
+    height: 20px;
 }
 
 .candidateCartExperience {
