--- a/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
+++ b/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
@@ -19,6 +19,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    margin-bottom: 20px;
 }
 
 .disNone {
@@ -37,7 +38,7 @@
 
 .mainProfile {
     width: 100%;
-    height: 85vh;
+    height: 80vh;
     margin-top: 25px;
     background-color: var(--white);
     border-radius: 8px;
@@ -308,4 +309,37 @@
 .key {
     font-size: 15px;
     font-weight: 600;
+}
+
+.vedioNotes {
+    display: flex;
+    align-items: flex-start;
+    background-color: #F5F3FF;
+    padding: 15px;
+    border-radius: 8px;
+}
+
+.vedioNotes img {
+    margin-right: 10px;
+    margin-top: 5px;
+    color: var(--textColor);
+}
+
+.notes h4 {
+    opacity: 0.6;
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 4px;
+}
+
+.notes {
+    padding-left: 10px;
+}
+
+.notes ol {
+    list-style: number;
+    opacity: 0.6;
+    font-weight: 500;
+    font-size: 14px;
+    padding-left: 20px;
 }
