--- a/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
+++ b/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
@@ -159,7 +159,7 @@
     align-items: center;
     justify-content: flex-start;
     margin-bottom: 3px;
-
+    margin-top: 5px;
 }
 
 .proExperience h5 {
