--- a/src/Components/Client/ClientSignUp/Pricing/PricingComp.css
+++ b/src/Components/Client/ClientSignUp/Pricing/PricingComp.css
@@ -19,6 +19,11 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
+}
+
+.pricingDashHead {
+    width: 50%;
 }
 
 .pricingCompHead h1 {
