--- a/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
+++ b/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
@@ -67,6 +67,8 @@
 
 .hourlyRate {
     width: 450px;
+    position: relative;
+    z-index: 5;
     padding: 25px;
     padding-bottom: 20px;
     margin-top: 15px;
@@ -111,7 +113,8 @@
     width: 300px;
     height: 280px;
     position: relative;
-    left: 14%;
+    left: 12.5%;
+    z-index: 5;
     padding: 5px;
     margin-top: 15px;
     border-radius: 10px;
@@ -372,4 +375,30 @@
     border: 1px solid var(--borderColor);
     background-color: var(--primaryColor);
     color: var(--white);
+}
+
+.searchButton {
+    padding: 5px;
+    border: 1px solid var(--borderColor);
+    border-radius: 8px;
+    font-size: 12px;
+    color: var(--textColor);
+    position: absolute;
+    background-color: var(--disableColor);
+    opacity: 0.5;
+    right: 10%;
+    top: 10%;
+}
+
+.searchButtonActive {
+    padding: 5px;
+    border: 1px solid var(--primaryColor);
+    border-radius: 8px;
+    font-size: 12px;
+    color: var(--white);
+    position: absolute;
+    background-color: var(--primaryColor);
+    right: 10%;
+    top: 10%;
+    z-index: 7;
 }
