--- a/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
+++ b/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
@@ -92,6 +92,8 @@
 
 .candidateCartSkills {
     width: 100%;
+    height: 85px;
+    overflow-y: hidden;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
@@ -100,8 +102,9 @@
 }
 
 .candidateCartSkills h4 {
-    margin: 5px 5px;
+    margin: 5px 10px;
     padding: 2px 7px;
+    margin-left: 0px;
     border-radius: 20px;
     display: flex;
     background-color: #F4F4F5;
