--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -164,8 +164,45 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
-
+.addressLine h3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: red; */
+}
+.warningmessage{
+    position: absolute;
+    background-color:#27272a;
+    width: 320px;
+    height: auto;
+    top: -130px;
+    right: 31px;
+    padding: 10px 15px;
+    border-radius: 8px;
+}
+.warningmessage::before{
+    position: absolute;
+    content:"";
+    width: 20px;
+    height: 20px;
+    background-color:#27272a;
+    transform: rotate(45deg);
+    bottom: -10px;
+    left: 48%;
+}
+.warningmessage h6{
+    width: 100%;
+    height: 100%;
+    color: white;
+    text-align: center;
+}
+.addressLine h3 .warningicon{
+    margin-left: 5px;
+    margin-top: 2px;
+    transform: rotate(180deg);
+}
 .candidateAddress {
     display: flex;
     flex-direction: column;
