--- a/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
+++ b/src/Components/Reusable/DashBoardReusable/DashSearch/DashSearch.css
@@ -402,3 +402,30 @@
     top: 10%;
     z-index: 7;
 }
+
+/* drop down */
+
+.searchDropDown {
+    /* height: 100%; */
+    width: 91%;
+    background-color: var(--white);
+    position: absolute;
+    top: 50%;
+    border: 1px solid var(--borderColor);
+    border-top: none;
+    z-index: 8;
+    border-radius: 8px;
+}
+
+.searchDropDown h2 {
+    font-size: 16px;
+    font-weight: 500;
+
+    padding: 10px 25px;
+
+}
+
+.searchDropDown h2:hover {
+    background-color: var(--disableColor);
+    border-radius: 8px;
+}
