--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -272,44 +272,35 @@
 .candidateInfo p select {
     outline: none;
     border: none;
-    color: black
 }
 
-.candidateInfo p select option:checked{
-    color: black;
-}
 
 .candidateInfo p input {
     outline: none;
     border: none;
     height: 95%;
+    padding-left: 5px;
 }
 
-.candidateInfo input::placeholder {
-    color: var(--borderColor)
-}
-.candidateInfo p select{
-    color: var(--borderColor)
-}
+
 .candidateInfo .candidateState {
     width: 100%;
     height: 42px;
     border: 1px solid var(--borderColor);
     border-radius: 7px;
-    padding: 15px;
+    padding: 15px 10px;
     font-size: 15px;
     outline: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
 }
 
 .candidateState select {
     width: 100%;
     outline: none;
     border: none;
-    color: var(--borderColor)
+    color: black
 }
 
 .company select::placeholder {
@@ -380,7 +371,7 @@
     text-align: center;
     font-size: 14px;
     font-weight: 500;
-    color: var(--textColorDark);
+    color:#6b7280;
 }
 
 .aadhaar1 {
