--- a/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
+++ b/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
@@ -863,3 +863,72 @@
 }
 
 /* travel History */
+
+.travel{
+    width: 100%;
+    height:500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 10px;
+}
+.travelslider{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    margin-left: 40px;
+    
+}
+.travelslider1{
+    margin: 0px 0px 20px 0px;
+    border-radius: 10px;
+    padding: 20px;
+    margin-right: 20px;
+    border: 1px solid #e4e4e7;
+}
+.travelslider1 h3{
+    font-size: 13px;
+    font-weight: 500;
+    color:#A1A1AA;
+    text-transform: uppercase;
+}
+.visaStatus{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+}
+.visaStatus h1{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.visaStatus h1[title]{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.visaStatus p{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 25px;
+}
+.visaStatus p span{
+    font-weight: 500;
+    font-size: 13px;
+    margin-left: 2px;
+}
+.travelslider1 h4{
+    font-size: 14px;
+    font-weight: 400;
+    color: #D1D5DB;
+    margin-top: 20px;
+}
+.travelslider::-webkit-scrollbar{
+    width: 8px;
+}
+.travelslider::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #d4d4d8;
+  }
